# R6-

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  LICENSE.md  README.md  _config.yml  index.md  sonar-project.properties
R6++/: CMakeLists.txt  CMakeSettings.json  Operators.h  R6pp.h  Types.h
R6Connection/: Constructor.md  GetAuthHeader.md  GetPlayerProfile.md  GetUserActions.md  GetUserApplications.md  GetUserGamemodeStat.md  GetUserGametypeStat.md  GetUserOperatorStat.md  GetUserOperatorStats.md  GetUserSeasonStat.md  GetUserWeaponStat.md  GetUserWeaponStats.md  R6Connection.md  SearchForUser.md
R6pp/: CMakeLists.txt  Operators.h  R6pp.cpp  R6pp.h  Types.h  sonar-project.properties
R6pp/include/R6pp/: Operators.h  Types.h
R6pp/src/: R6pp.cpp
Types/: AuthenticationHeader.md  BaseOperator.md  BaseSeason.md  BaseWeapon.md  Group.md  Image.md  PlatformType.md  PlayerProfile.md  Region.md  SearchedUser.md  SearchedUsers.md  Seasons.md  Types.md  UserAction.md  UserActions.md  UserApplication.md  UserApplications.md  UserGamemodeStat.md  UserGametypeStat.md  UserGeneralStat.md  UserOperatorStat.md  UserOperatorsStats.md  UserSeasonStat.md  UserWeaponStat.md  UserWeaponStats.md  Weapons.md
